--- a/INFORMATION/index.html
+++ b/INFORMATION/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
+<head>
+    <a href="../index.html">Home</a>
+    <a href="../MENU/index.html">Menu</a>
+    <a href="../TAQUERITOS/index.html">Taqueritos</a>
+    <a href="../CHECKOUT/index.html">Check Out</a>
+    <a href="../INFORMATION/index.html">Survey</a>
+</head>
+<h1>Thank you for filling our survey</h1>
 
-<h1>The input value attribute</h1>
-
-<p>Pleas:</p>
+<p>Please enter your name:</p>
 
 <form action="/action_page.php">
     <form action="/action_page.php">
