--- a/MENU/index.html
+++ b/MENU/index.html
@@ -10,7 +10,8 @@
     <a href="../index.html">Home</a>
     <a href="../MENU/index.html">Menu</a>
     <a href="../TAQUERITOS/index.html">Taqueritos</a>
-    <a href="../CHECKOUT/index.html">Check out</a>
+    <a href="../CHECKOUT/index.html">Check Out</a>
+    <a href="../INFORMATION/index.html">Survey</a>
 </nav>
 <body>
     
