--- a/INFORMATION/index.html
+++ b/INFORMATION/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
 <body>
-<head>
-    <a href="../index.html">Home</a>
-    <a href="../MENU/index.html">Menu</a>
-    <a href="../TAQUERITOS/index.html">Taqueritos</a>
-    <a href="../CHECKOUT/index.html">Check Out</a>
-    <a href="../INFORMATION/index.html">Survey</a>
-</head>
-<h1>Thank you for filling our survey</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="../global.css">
+    </head>
+    <nav>
+        <div class="logo">Tacos My Guey
+        </div>
+        <div class="nav-items">
+        <a href="../index.html">Home</a>
+        <a href="../MENU/index.html">Menu</a>
+        <a href="../TAQUERITOS/index.html">Taqueritos</a>
+        <a href="../CHECKOUT/index.html">Check Out</a>
+        <a href="../INFORMATION/index.html">Survey</a>
+        </div>
+    </nav>
+    <section class="hero">
+        <div class="hero-container">
+            <div class="column-left">
+                <h1>Leave your review</h1>
+            
 
 <p>Please enter your name:</p>
 
@@ -40,7 +55,15 @@
       </form>
   
 </form>
-
+            </div>
+                 <div class="colum-right">
+                      <img src="../images/OIP.jpg" alt="Logomyguey
+                      "class="hero-image
+                        ">
+                </div>
+            
+        </div>
+    </section>
 </body>
 </html>
 
