--- a/MENU/index.html
+++ b/MENU/index.html
@@ -5,15 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../global.css">
 </head>
 <nav>
+    <div class="logo">Tacos My Guey
+    </div>
+    <div class="nav-items">
     <a href="../index.html">Home</a>
     <a href="../MENU/index.html">Menu</a>
     <a href="../TAQUERITOS/index.html">Taqueritos</a>
     <a href="../CHECKOUT/index.html">Check Out</a>
     <a href="../INFORMATION/index.html">Survey</a>
+    </div>
 </nav>
+
 <body>
+    <section class="hero">
+        <div class="hero-container">
+            <div class="column-left">
+                <h1>Enjoy our delicious Tacos</h1>
+        <div class="Tacos">
+            <h2>Recommended</h2>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="product-top">
+                    <img src="../images/tacos.jpg">
+                        <div class="overlay">
+                            <button type="button" class="btn btn-secondaty" 
+                            tittle="Add to Cart"><i class="fa fa-shoping"</i></button>
+                        </div>
+                    </div>
+                    <div class="product-bottom text-center">
+                        
+
+                    </div>
+                </div>            
+            </div>
+        </div>
     
 </body>
 </html>
