--- a/index.html
+++ b/index.html
@@ -5,42 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tacos My Guey</title>
-    <style>
-        .squiggly-underline{
-            text-decoration: rgb(255, 0, 195) solid underline;
-        }
-        .funtext{
-            text-decoration:rgb(43, 255, 0) double underline;
-        
-        }
-</style>
-<link rel="stylesheet" href="./style.css"> 
-<link rel="stylesheet" href="./global">
+
+<link rel="stylesheet" href="./global.css">
 </head>
 <body>
     <header>
-        <h1><span class="squiggly-underline">Tacos My Guey</span></h1>
         <nav>
+            <div class="logo">Tacos My Guey
+            </div>
+            <div class="nav-items">
             <a href="./index.html">Home</a>
             <a href="./MENU/index.html">Menu</a>
             <a href="./TAQUERITOS/index.html">Taqueritos</a>
             <a href="./CHECKOUT/index.html">Check Out</a>
             <a href="./INFORMATION/index.html">Survey</a>
+            </div>
         </nav>
-        <p><span class="funtext">
-            Lorem ipsum dolor sit amet. Id ratione alias sit sint cumque non laboriosam cupiditate est porro eius et inventore corporis sed voluptate consequatur. Ea quasi enim sed quia quia et labore voluptatibus? Et error deleniti et voluptatem debitis et nesciunt cupiditate et recusandae similique. Id veritatis enim ad tempora internos id molestiae officia qui possimus velit ea blanditiis pariatur ut repellat magni.
+        <section class="hero">
+            <div class="hero-container">
+                <div class="column-left">
+                    <h1>Tacos My Guey a Familia owned Mexican restaurant.</h1>
+                    <p>You could always find the best fresh mexican food in Orlando</p>
+                    <a href="./MENU/index.html"><button>Order Here</button></a>
 
-Et laudantium internos ab quibusdam voluptates non quidem libero non fugiat quia non ipsa nisi! Et iste quia in repellendus animi nam autem sapiente in amet dolores aut ipsam omnis eos tenetur aliquam!
-
-Qui inventore omnis qui ullam modi non voluptates temporibus et eligendi inventore eos molestias odio qui necessitatibus laboriosam et eligendi dicta. Qui omnis tempora aut voluptas corrupti non quia fugiat eos numquam nesciunt.
-        </span>
-        </p>
+                </div>
+                <div class="colum-right">
+                    <img src="./images/chico_1.png" alt="Ale
+                    "class="hero-image
+                    ">
+                </div>
+            </div>
+        </section>
     </header>
     <footer></footer>
 
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </head>
 <body>
