--- a/MENU/index.html
+++ b/MENU/index.html
@@ -25,14 +25,14 @@
             <div class="column-left">
                 <h1>Enjoy our delicious Tacos</h1>
         <div class="Tacos">
-            <h2>Recommended</h2>
+            <h2>Barbacoa Tacos</h2>
             <div class="row">
                 <div class="col-md-3">
                     <div class="product-top">
                     <img src="../images/tacos.jpg">
                         <div class="overlay">
                             <button type="button" class="btn btn-secondaty" 
-                            tittle="Add to Cart"><i class="fa fa-shoping"</i></button>
+                            tittle="Add to Cart"><i class="fa fa-shoping"</i>3.49$</button>
                         </div>
                     </div>
                     <div class="product-bottom text-center">
