--- a/INFORMATION/index.html
+++ b/INFORMATION/index.html
@@ -51,7 +51,7 @@
         <label for="age2">31 - 60</label><br>  
         <input type="radio" id="age3" name="age" value="100">
         <label for="age3">61 - 100</label><br><br>
-        <input type="submit" value="Submit">
+        <button>Submit</button>
       </form>
   
 </form>
