--- a/INFORMATION/index.html
+++ b/INFORMATION/index.html
@@ -51,9 +51,8 @@
         <label for="age2">31 - 60</label><br>  
         <input type="radio" id="age3" name="age" value="100">
         <label for="age3">61 - 100</label><br><br>
-        <button>Submit</button>
       </form>
-  
+      <a href="../Survey/index.html"><button>Submit</button></a>
 </form>
             </div>
                  <div class="colum-right">
