--- a/MENU/index.html
+++ b/MENU/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../global.css">
-</head>
-<nav>
+<!doctype html>
+<html>
+ <head>
+   <title>E-Commerce website</title>
+   <link rel="stylesheet" type="text/css" href="../global.css">
+   <link rel="stylesheet" type="text/css" href="../style.css">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+ </head>
+ <nav>
     <div class="logo">Tacos My Guey
     </div>
     <div class="nav-items">
@@ -19,29 +22,171 @@
     </div>
 </nav>
 
-<body>
-    <section class="hero">
-        <div class="hero-container">
-            <div class="column-left">
-                <h1>Enjoy our delicious Tacos</h1>
-        <div class="Tacos">
-            <h2>Barbacoa Tacos</h2>
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="product-top">
-                    <img src="../images/tacos.jpg">
-                        <div class="overlay">
-                            <button type="button" class="btn btn-secondaty" 
-                            tittle="Add to Cart"><i class="fa fa-shoping"</i>3.49$</button>
-                        </div>
-                    </div>
-                    <div class="product-bottom text-center">
-                        
+ <body>
+   <div class="top-nav-bar">
+     <div class="search-box">
+     <img src="../images/OIP.jpg" class="logos">
+     <input type="text" class="form-control">
+     <span class="input-group-text"><i class="fa fa-search" aria-hidden="true"></i></span>
+   </div>
+   <div class="menu-bar">
+   </div>
+    </div>
+  </div>
+  <div class="container">
+    <h2>ANTOJITOS</h2>
+	    <div class="row">
+			<div class="col-md-3">
+				<div class="product-top">
+				<img src="../images/tacos.jpg">
+				<div class="overlay">
+				<buttom type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="fa fa-eye"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-heart-o"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Add to Cart"><i class="fa fa-shopping-cart"></i></buttom>
+				</div>
+				</div>
 
-                    </div>
-                </div>            
-            </div>
-        </div>
-    
-</body>
+				<div class="product-bottom text-center">
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star-o"></i>
+				    <h3>Tacos</h3>
+					<h5>$4.99</h5>
+				</div>
+
+			</div>
+			<div class="col-md-3">
+				<div class="product-top">
+				<img src="../images/burrito.jpg">
+				<div class="overlay">
+				<buttom type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="fa fa-eye"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-heart-o"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Add to Cart"><i class="fa fa-shopping-cart"></i></buttom>
+				</div>
+				</div>
+
+				<div class="product-bottom text-center">
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				    <h3>Burritos</h3>
+					<h5>$12.99</h5>
+				</div>
+
+			</div>
+			<div class="col-md-3">
+				<div class="product-top">
+				<img src="../images/queso.jpg">
+				<div class="overlay">
+				<buttom type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="fa fa-eye"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-heart-o"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Add to Cart"><i class="fa fa-shopping-cart"></i></buttom>
+				</div>
+				</div>
+
+				<div class="product-bottom text-center">
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star-half-o"></i>
+				    <h3>Queso con Chorizo</h3>
+					<h5>$8.99</h5>
+				</div>
+
+			</div>
+			<div class="col-md-3">
+				<div class="product-top">
+				<img src="../images/torta.webp">
+				<div class="overlay">
+				<buttom type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="fa fa-eye"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-heart-o"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Add to Cart"><i class="fa fa-shopping-cart"></i></buttom>
+				</div>
+				</div>
+
+				<div class="product-bottom text-center">
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star-half-o"></i>
+				<i class="fa fa-star-o"></i>
+				    <h3>Tortas</h3>
+					<h5>$15.29</h5>
+				</div>
+
+			</div>
+			<div class="col-md-3">
+				<div class="product-top">
+				<img src="../images/quesadilla.jpg">
+				<div class="overlay">
+				<buttom type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="fa fa-eye"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-heart-o"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Add to Cart"><i class="fa fa-shopping-cart"></i></buttom>
+				</div>
+				</div>
+
+				<div class="product-bottom text-center">
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star-half-o"></i>
+				<i class="fa fa-star-o"></i>
+				    <h3>Quesadillas</h3>
+					<h5>$10.99</h5>
+				</div>
+
+			</div>
+			<div class="col-md-3">
+				<div class="product-top">
+				<img src="../images/tostadas.webp">
+				<div class="overlay">
+				<buttom type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="fa fa-eye"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-heart-o"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Add to Cart"><i class="fa fa-shopping-cart"></i></buttom>
+				</div>
+				</div>
+
+				<div class="product-bottom text-center">
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star-half-o"></i>
+				<i class="fa fa-star-o"></i>
+				    <h3>Tostadas</h3>
+					<h5>$5.99</h5>
+				</div>
+
+			</div>
+			<div class="col-md-3">
+				<div class="product-top">
+				<img src="../images/horchata-6.jpg">
+				<div class="overlay">
+				<buttom type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="fa fa-eye"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-heart-o"></i></buttom>
+				<buttom type="button" class="btn btn-secondary" title="Add to Cart"><i class="fa fa-shopping-cart"></i></buttom>
+				</div>
+				</div>
+
+				<div class="product-bottom text-center">
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star-half-o"></i>
+				<i class="fa fa-star-o"></i>
+				    <h3>Horchata</h3>
+					<h5>$2.99</h5>
+				</div>
+
+			
+			
+
+			</div>
+		</div>
+	</div>
+  </body>
 </html>
