--- a/CHECKOUT/index.html
+++ b/CHECKOUT/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../global.css">
-</head>
-<nav>
+<!doctype html>
+<html>
+ <head>
+   <title>E-Commerce website</title>
+   <link rel="stylesheet" type="text/css" href="../global.css">
+ </head>
+ <nav>
     <div class="logo">Tacos My Guey
     </div>
     <div class="nav-items">
@@ -19,12 +16,4 @@
     </div>
 </nav>
 
-<body>
-    <section class="hero">
-        <div class="hero-container">
-            <div class="column-left">
-                <h1>Keep Eating</h1>
-
-    
-</body>
-</html>
+ <body></body>
