--- a/MENU/index.html
+++ b/MENU/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
  <head>
-   <title>E-Commerce website</title>
+   <title>E-Commerce website Tacos my guey</title>
    <link rel="stylesheet" type="text/css" href="../global.css">
    <link rel="stylesheet" type="text/css" href="../style.css">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
