--- a/CHECKOUT/index.html
+++ b/CHECKOUT/index.html
@@ -3,6 +3,7 @@
  <head>
    <title>E-Commerce website</title>
    <link rel="stylesheet" type="text/css" href="../global.css">
+   <link rel="stylesheet" type="text/css" href="../table.css">
  </head>
  <nav>
     <div class="logo">Tacos My Guey
@@ -78,8 +79,8 @@
           <label>
             <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
           </label>
-          <input type="submit" value="Continue to checkout" class="btn">
         </form>
+        <a href="../thanks/index.html"><input type="submit" value="Checkout" class="btn"></a>
       </div>
     </div>
   
