--- a/MENU/index.html
+++ b/MENU/index.html
@@ -23,16 +23,6 @@
 </nav>
 
  <body>
-   <div class="top-nav-bar">
-     <div class="search-box">
-     <img src="../images/OIP.jpg" class="logos">
-     <input type="text" class="form-control">
-     <span class="input-group-text"><i class="fa fa-search" aria-hidden="true"></i></span>
-   </div>
-   <div class="menu-bar">
-   </div>
-    </div>
-  </div>
   <div class="container">
     <h2>ANTOJITOS</h2>
 	    <div class="row">
@@ -113,7 +103,7 @@
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
-				<i class="fa fa-star-half-o"></i>
+				<i class="fa fa-star"></i>
 				<i class="fa fa-star-o"></i>
 				    <h3>Tortas</h3>
 					<h5>$15.29</h5>
@@ -176,8 +166,8 @@
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
-				<i class="fa fa-star-half-o"></i>
-				<i class="fa fa-star-o"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
 				    <h3>Horchata</h3>
 					<h5>$2.99</h5>
 				</div>
