--- a/indexx.html
+++ b/indexx.html
@@ -1,19 +1,8 @@
-# capstone-tacosmyguey-site
-Guillermo Rodriguez First project. 
-
-<body>
-<p>Home</p>
+<!DOCTYPE html>
 <img src="./screenshots/Capture.PNG">
-<p>Menu</p>
 <img src="./screenshots/Capture1.PNG">
-<p>Taqueritos</p>
 <img src="./screenshots/Capture2.PNG">
-<p>Login</p>
 <img src="./screenshots/Capture3.PNG">
-<p>Check Out</p>
 <img src="./screenshots/Capture4.PNG">
-<p>Survey</p>
 <img src="./screenshots/Capture5.PNG">
-<p>Response</p>
 <img src="./screenshots/Capture6.PNG">
-</body>
